Enhance UserModel Wrapped up Upload to use Speed Dial   - Stop selection after group tagging   - Border on selection

--- a/client/src/components/ImagePreviews/ImagePreviews.css
+++ b/client/src/components/ImagePreviews/ImagePreviews.css
@@ -4,6 +4,7 @@
 
 .previewContainer.selected > div {
     box-shadow: -5px 7px 5px 0px rgba(0,0,0,0.75);
+    border: purple solid 1px;
 }
 
 .selectIcon {
